kubernetes/apps/base/media/arr/brrpolice/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brrpolice
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: brrpolice
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:latest
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
        - name: data
          persistentVolumeClaim:
            claimName: media
