kubernetes/apps/base/media/arr/brrpolice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  selector:
    app: prowlarr
  ports:
    - name: http
      port: 9696
