kubernetes/apps/base/media/arr/brrpolice/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prowlarr.theblacklodge.dev`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
